Splicing a Join Geometry node will adopt the multi-input connection position from the following socket #87171

Closed
opened 2021-04-03 18:54:21 +02:00 by Erindale · 3 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.92

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-02 21:26, hash: 321eef6a0c
Worked: (newest version of Blender that worked as expected)

Short description of error
When adding a new Join Geometry node before an existing join geometry node which has a bunch of inputs, the noodle will try to connect in its existing position. Seems to be counted from the bottom of the socket as you can end up with noodles far above the top of the new join geometry node.

Exact steps for others to reproduce the error
Drop a join geometry node onto a noodle before another join geometry node and it will take the multi-input socket position of the existing node.
See attached file.

2021-04-03 17-34-07.mp4

join socket bug2.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.92 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-02 21:26, hash: `321eef6a0c` Worked: (newest version of Blender that worked as expected) **Short description of error** When adding a new Join Geometry node before an existing join geometry node which has a bunch of inputs, the noodle will try to connect in its existing position. Seems to be counted from the bottom of the socket as you can end up with noodles far above the top of the new join geometry node. **Exact steps for others to reproduce the error** Drop a join geometry node onto a noodle before another join geometry node and it will take the multi-input socket position of the existing node. See attached file. [2021-04-03 17-34-07.mp4](https://archive.blender.org/developer/F9919063/2021-04-03_17-34-07.mp4) [join socket bug2.blend](https://archive.blender.org/developer/F9919074/join_socket_bug2.blend)
Author

Added subscriber: @Erindale

Added subscriber: @Erindale
Wannes Malfait self-assigned this 2021-04-13 17:12:56 +02:00

This issue was referenced by 4cf3010714

This issue was referenced by 4cf3010714e92af52a1943feac0c89a9a41f297f
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87171
No description provided.